--- a/package.json
+++ b/package.json
@@ -1,57 +1,104 @@
 {
-  "name": "pompaute",
-  "version": "1.0.0",
-  "description": "Collection of common components, composables and utils for Vue projects.",
-  "author": "Stanley Horwood <stanley@hsjm.io>",
+  "name": "hsjm",
+  "version": "2.0.0",
+  "private": true,
+  "description": "Opinionated collection of common components, composables and utils for Vue projects.",
   "license": "MIT",
-  "keywords": [
-    "utils",
-    "vue",
-    "vue-use",
-    "vue-components"
+  "author": "Stanley Horwood <stanley@hsjm.io>",
+  "files": [
+    "dist",
+    "LICENCE",
+    "README.md"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/shorwood/pompaute.git",
-    "directory": "packages/core"
-  },
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
-  "types": "dist/index.d.ts",
-  "unpkg": "dist/index.iife.min.js",
-  "jsdelivr": "dist/index.iife.min.js",
-  "exports": {
-    ".": {
-      "import": "./dist/index.esm.js",
-      "require": "./dist/index.cjs.js",
-      "types": "./dist/index.d.ts"
-    },
-    "./*": "./components/*"
-  },
   "scripts": {
-    "build": "rollup --config",
-    "dev": "rollup --config -w"
+    "build": "tsup --minify",
+    "dev": "tsup --watch",
+    "lint": "eslint --fix ."
+  },
+  "peerDependencies": {
+    "@vue/composition-api": "^1.0.0-rc.1",
+    "vue": "^2.0.0 || >=3.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@vue/composition-api": {
+      "optional": true
+    }
+  },
+  "dependencies": {
+    "@iconify/iconify": "^2.2.0",
+    "@iconify/utils": "^1.0.30",
+    "@vueuse/components": "^8.1.2",
+    "@vueuse/core": "^8.1.2",
+    "@vueuse/shared": "^8.1.2",
+    "axios": "^0.26.1",
+    "firebase": "^9.6.9",
+    "leaflet": "^1.7.1",
+    "lodash": "^4.17.21",
+    "milsymbol": "^2.0.0",
+    "vue-demi": "^0.12.4",
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.0.6",
-    "@rollup/plugin-typescript": "^8.3.0",
-    "@types/color": "^3.0.2",
-    "@types/lodash-es": "^4.17.5",
-    "@types/node": "^16.9.1",
-    "@types/rollup": "^0.54.0",
-    "@vueuse/core": "^6.3.3",
-    "@vueuse/shared": "^6.3.3",
-    "color": "^4.0.2",
-    "lodash-es": "^4.17.21",
-    "rollup": "^2.60.1",
-    "rollup-plugin-dts": "^4.0.1",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-vue": "^6.0.0",
-    "typescript": "^4.5.2",
-    "vue-demi": "^0.12.1"
+    "@types/eslint": "^8.4.1",
+    "@types/leaflet": "^1.7.9",
+    "@types/lodash": "^4.14.180",
+    "@types/node": "^17.0.22",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "eslint": "^8.11.0",
+    "eslint-config-standard": "17.0.0-1",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-html": "^6.2.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsonc": "^2.2.1",
+    "eslint-plugin-markdown": "^2.2.1",
+    "eslint-plugin-n": "^15.0.1",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-unicorn": "^41.0.1",
+    "eslint-plugin-yml": "^0.14.0",
+    "esno": "^0.14.1",
+    "jsonc-eslint-parser": "^2.1.0",
+    "tslib": "^2.3.1",
+    "tsup": "^5.12.1",
+    "typescript": "^4.6.2",
+    "unplugin-vue-components": "^0.18.3",
+    "vue": "^3.2.31",
+    "yaml-eslint-parser": "^0.5.0"
   },
-  "dependencies": {}
+  "tsup": [
+    {
+      "entry": ["src/*/index.ts"],
+      "loader": {
+        ".css": "default",
+        ".jpg": "dataurl",
+        ".png": "dataurl"
+      },
+      "format": ["esm", "cjs"],
+      "splitting": false,
+      "sourcemap": true,
+      "metafile": true,
+      "clean": true,
+      "dts": true
+    },
+    {
+      "entry": ["src/eslint-config/*.ts"],
+      "outDir": "dist/eslint-config",
+      "format": ["cjs"],
+      "splitting": false,
+      "shims": false
+    }
+  ],
+  "pnpm": {
+    "overrides": {
+      "object-keys": "1.1.1",
+      "node-ipc": "9.1.1"
+    }
+  },
+  "eslintConfig": {
+    "ignorePatterns": ["dist/", "node_modules/"],
+    "extends": [
+      "./dist/eslint-config/basic.js",
+      "./dist/eslint-config/typescript.js"
+    ]
+  }
 }
