--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "devDependencies": {
     "@firebase/rules-unit-testing": "^2.0.4",
     "@hsjm/eslint-config": "workspace:^1.0.3",
-    "@types/node": "^18.7.20",
+    "@types/node": "^18.11.3",
     "@vitest/ui": "^0.23.4",
     "@vue/test-utils": "^2.0.2",
     "c8": "^7.12.0",
@@ -38,6 +38,8 @@
     "pm2": "^5.2.0",
     "tslib": "^2.4.0",
     "tsup": "^6.2.3",
+    "types-pkg-json": "^1.2.1",
+    "types-tsconfig": "^1.2.1",
     "typescript": "^4.8.3",
     "vite": "^3.1.3",
     "vitest": "^0.23.4"
