--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -94,7 +94,6 @@
     "build:lint": "eslint package.json --fix --no-ignore"
   },
   "devDependencies": {
-    "@types/node": "^18.7.20",
-    "axios": "^0.27.2"
+    "@types/node": "^18.11.4"
   }
 }
