chore: upgraded packages

--- a/package.json
+++ b/package.json
@@ -18,31 +18,34 @@
     "build": "pnpm recursive run build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "vitest run --coverage",
-    "test:ui": "vitest --ui"
+    "test": "vitest run",
+    "test:ui": "vitest --ui",
+    "test:watch": "vitest run --watch",
+    "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
-    "@firebase/rules-unit-testing": "^2.0.4",
+    "@firebase/rules-unit-testing": "^2.0.5",
     "@hsjm/eslint-config": "workspace:^1.0.3",
-    "@types/node": "^18.11.3",
-    "@vitest/ui": "^0.23.4",
-    "@vue/test-utils": "^2.0.2",
+    "@types/node": "^18.11.9",
+    "@vitest/coverage-c8": "^0.24.5",
+    "@vitest/ui": "^0.24.5",
+    "@vue/test-utils": "^2.2.1",
     "c8": "^7.12.0",
     "consola": "^2.15.3",
     "crypto-js": "^4.1.1",
     "defu": "^6.1.0",
-    "eslint": "^8.24.0",
+    "eslint": "^8.26.0",
     "esno": "^0.16.3",
     "fast-glob": "^3.2.12",
-    "happy-dom": "^6.0.4",
-    "pm2": "^5.2.0",
-    "tslib": "^2.4.0",
-    "tsup": "^6.2.3",
+    "happy-dom": "^7.6.6",
+    "pm2": "^5.2.2",
+    "tslib": "^2.4.1",
+    "tsup": "^6.4.0",
     "types-pkg-json": "^1.2.1",
     "types-tsconfig": "^1.2.1",
-    "typescript": "^4.8.3",
-    "vite": "^3.1.3",
-    "vitest": "^0.23.4"
+    "typescript": "^4.8.4",
+    "vite": "^3.2.2",
+    "vitest": "^0.24.5"
   },
   "eslintConfig": {
     "ignorePatterns": [
