--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "esno": "^0.16.3",
     "fast-glob": "^3.2.12",
     "happy-dom": "^7.6.6",
+    "memfs": "^3.4.10",
     "pm2": "^5.2.2",
     "tslib": "^2.4.1",
     "tsup": "^6.4.0",
