--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
     "@firebase/rules-unit-testing": "^2.0.5",
     "@hsjm/eslint-config": "workspace:^1.0.3",
     "@types/node": "^18.11.9",
+    "@vitejs/plugin-vue": "^3.2.0",
     "@vitest/coverage-c8": "^0.25.2",
     "@vitest/ui": "^0.25.2",
     "@vue/test-utils": "^2.2.3",
@@ -34,6 +37,10 @@
     "consola": "^2.15.3",
     "crypto-js": "^4.1.1",
     "defu": "^6.1.1",
+    "esbuild-plugin-babel": "^0.2.3",
+    "esbuild-plugin-glob": "^2.1.3",
+    "esbuild-plugin-import-glob": "^0.1.1",
+    "esbuild-plugins-node-modules-polyfill": "^1.0.6",
     "eslint": "^8.28.0",
     "esno": "^0.16.3",
     "fast-glob": "^3.2.12",
@@ -42,8 +49,6 @@
     "pm2": "^5.2.2",
     "tslib": "^2.4.1",
     "tsup": "^6.5.0",
-    "types-pkg-json": "^1.2.1",
-    "types-tsconfig": "^1.2.1",
     "typescript": "^4.9.3",
     "vite": "^3.2.4",
     "vitest": "^0.25.2"
