--- a/package.json
+++ b/package.json
@@ -24,34 +24,39 @@
     "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
     "@firebase/rules-unit-testing": "^2.0.5",
     "@hsjm/eslint-config": "workspace:^1.0.3",
-    "@types/node": "^18.11.9",
-    "@vitejs/plugin-vue": "^3.2.0",
-    "@vitest/coverage-c8": "^0.25.2",
-    "@vitest/ui": "^0.25.2",
-    "@vue/test-utils": "^2.2.3",
+    "@types/node": "^18.11.18",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitest/coverage-c8": "^0.26.3",
+    "@vitest/ui": "^0.26.3",
+    "@vue/test-utils": "^2.2.7",
+    "axios": "^1.2.2",
     "c8": "^7.12.0",
     "consola": "^2.15.3",
     "crypto-js": "^4.1.1",
     "defu": "^6.1.1",
+    "esbuild": "^0.16.15",
     "esbuild-plugin-babel": "^0.2.3",
-    "esbuild-plugin-glob": "^2.1.3",
+    "esbuild-plugin-glob": "^2.2.0",
     "esbuild-plugin-import-glob": "^0.1.1",
-    "esbuild-plugins-node-modules-polyfill": "^1.0.6",
-    "eslint": "^8.28.0",
+    "esbuild-plugins-node-modules-polyfill": "^1.0.9",
+    "eslint": "^8.31.0",
     "esno": "^0.16.3",
     "fast-glob": "^3.2.12",
-    "happy-dom": "^7.7.0",
-    "memfs": "^3.4.12",
+    "firebase": "^9.15.0",
+    "happy-dom": "^8.1.3",
+    "memfs": "^3.4.13",
     "pm2": "^5.2.2",
     "tslib": "^2.4.1",
     "tsup": "^6.5.0",
-    "typescript": "^4.9.3",
-    "vite": "^3.2.4",
-    "vitest": "^0.25.2"
+    "typescript": "^4.9.4",
+    "vite": "^4.0.4",
+    "vitest": "^0.26.3",
+    "vue": "^3.2.45"
   },
   "eslintConfig": {
     "extends": [
