--- a/package.json
+++ b/package.json
@@ -56,29 +56,36 @@
   "devDependencies": {
     "@babel/core": "7.20.12",
     "@types/node": "18.11.18",
-    "@vitest/coverage-c8": "0.26.3",
-    "@vitest/ui": "0.26.3",
-    "axios": "1.2.2",
+    "@vitest/coverage-c8": "0.27.2",
+    "@vitest/ui": "0.27.2",
+    "axios": "1.2.3",
     "c8": "7.12.0",
-    "esbuild": "0.16.17",
-    "esbuild-plugin-polyfill-node": "0.1.3",
+    "esbuild": "0.17.3",
+    "esbuild-plugin-polyfill-node": "0.1.4",
     "esbuild-plugin-progress": "1.0.1",
     "esbuild-plugins-node-modules-polyfill": "1.0.9",
-    "eslint": "8.31.0",
+    "eslint": "8.32.0",
     "fast-glob": "3.2.12",
-    "happy-dom": "8.1.3",
+    "happy-dom": "8.1.4",
     "memfs": "3.4.13",
     "tsup": "6.5.0",
     "types-pkg-json": "1.2.1",
-    "types-tsconfig": "1.2.1",
+    "types-tsconfig": "2.0.2",
     "typescript": "4.9.4",
     "vite": "4.0.4",
-    "vitest": "0.26.3"
+    "vitest": "0.27.2"
   },
   "eslintConfig": {
     "extends": [
       "./src/eslint-config/basic",
       "./src/eslint-config/typescript"
     ]
+  },
+  "pnpm": {
+    "overrides": {
+      "bl@<0.9.5": ">=0.9.5",
+      "bl@<1.2.3": ">=1.2.3",
+      "semver@<4.3.2": ">=4.3.2"
+    }
   }
 }
