--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "unshared-dev",
+  "name": "@unshared/monorepo",
+  "type": "module",
   "version": "1.0.0",
   "author": "Stanley Horwood <stanley@hsjm.io>",
   "description": "Opinionated collection of common components, composables and utils for Vue projects.",
@@ -9,24 +10,6 @@
     "type": "git",
     "url": "git+https://github.com/shorwood/unshared.git"
   },
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
-  "type": "module",
-  "exports": {
-    ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "default": "./dist/index.js",
-      "node": "./dist/index.js"
-    },
-    "./package.json": "./package.json"
-  },
-  "files": [
-    "dist",
-    "README.md",
-    "LICENSE"
-  ],
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup",
@@ -42,44 +25,29 @@
     "types-pkg-json": ">=1.0.0",
     "types-tsconfig": ">=1.0.0"
   },
-  "peerDependenciesMeta": {
-    "@types/node": {
-      "optional": true
-    },
-    "types-pkg-json": {
-      "optional": true
-    },
-    "types-tsconfig": {
-      "optional": true
-    }
-  },
   "devDependencies": {
     "@babel/core": "7.20.12",
-    "@types/node": "18.11.18",
-    "@vitest/coverage-c8": "0.27.2",
-    "@vitest/ui": "0.27.2",
-    "axios": "1.2.3",
+    "@types/node": "18.13.0",
+    "@unshared/eslint-config": "workspace:*",
+    "@vitest/coverage-c8": "0.28.5",
+    "@vitest/ui": "0.28.5",
+    "axios": "1.3.3",
     "c8": "7.12.0",
-    "esbuild": "0.17.3",
+    "esbuild": "0.17.8",
+    "esbuild-plugin-ifdef": "1.0.1",
     "esbuild-plugin-polyfill-node": "0.1.4",
     "esbuild-plugin-progress": "1.0.1",
     "esbuild-plugins-node-modules-polyfill": "1.0.9",
-    "eslint": "8.32.0",
+    "eslint": "8.34.0",
     "fast-glob": "3.2.12",
-    "happy-dom": "8.1.4",
+    "happy-dom": "8.4.0",
     "memfs": "3.4.13",
-    "tsup": "6.5.0",
+    "tsup": "6.6.3",
     "types-pkg-json": "1.2.1",
     "types-tsconfig": "2.0.2",
-    "typescript": "4.9.4",
-    "vite": "4.0.4",
-    "vitest": "0.27.2"
-  },
-  "eslintConfig": {
-    "extends": [
-      "./src/eslint-config/basic",
-      "./src/eslint-config/typescript"
-    ]
+    "typescript": "4.9.5",
+    "vite": "4.1.1",
+    "vitest": "0.28.5"
   },
   "pnpm": {
     "overrides": {
@@ -87,5 +55,11 @@
       "bl@<1.2.3": ">=1.2.3",
       "semver@<4.3.2": ">=4.3.2"
     }
+  },
+  "eslintConfig": {
+    "extends": [
+      "@unshared/eslint-config/basic",
+      "@unshared/eslint-config/typescript"
+    ]
   }
 }
