chore(workspace): enabled vitest "in-source" testing
Added global declaration `import.meta.vitest` for in-source testing. Also tweaked build automatically discard test code and avoid side-effects.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,10 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "typeRoots": ["./node_modules/@types"],
-    "types": ["vitest/globals"]
+    "types": [
+      "vitest/globals",
+      "vitest/importMeta"
+    ]
   },
   "include": [ "packages", "scripts" ],
   "exclude": [ "node_modules", "dist" ]
