--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,16 +4,27 @@
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "Node",
-    "lib": ["ESNext", "DOM", "DOM.Iterable"],
-    "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "typeRoots": ["./node_modules/@types"],
+    "typeRoots": [
+      "./node_modules/@types"
+    ],
     "types": [
       "vitest/globals",
       "vitest/importMeta"
-    ]
+    ],
+    "paths": {
+      "@unshared/*": ["./packages/*"]
+    }
   },
-  "include": [ "packages", "scripts" ],
-  "exclude": [ "node_modules", "dist" ]
+  "include": [
+    "packages",
+    "scripts",
+    "examples",
+    "tsup.config.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
