--- a/examples/mandelbrot/package.json
+++ b/examples/mandelbrot/package.json
@@ -1,14 +1,11 @@
 {
+  "name": "@example/mandlebrot",
   "type": "module",
   "private": true,
   "scripts": {
     "dev": "tsup-node --watch",
     "build": "tsup-node",
     "start": "node dist/index.mjs"
-  },
-  "dependencies": {
-    "@unshared/function": "workspace:*",
-    "@unshared/process": "workspace:*"
   },
   "devDependencies": {
     "@chialab/esbuild-plugin-meta-url": "0.17.2",
