--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,7 @@
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "Node",
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
+    "strict": true,
     "typeRoots": [
       "./node_modules/@types"
     ],
