--- a/package.json
+++ b/package.json
@@ -21,27 +21,30 @@
     "test:coverage": "vitest --coverage"
   },
   "devDependencies": {
-    "@changesets/cli": "2.26.0",
-    "@chialab/esbuild-plugin-meta-url": "0.17.3",
-    "@chialab/esbuild-plugin-worker": "0.17.4",
-    "@types/eslint": "8.21.3",
-    "@types/node": "18.15.3",
+    "@changesets/cli": "2.26.2",
+    "@chialab/esbuild-plugin-meta-url": "0.17.7",
+    "@chialab/esbuild-plugin-worker": "0.17.5",
+    "@types/eslint": "8.44.2",
+    "@types/js-yaml": "4.0.5",
+    "@types/node": "20.4.7",
     "@unshared/eslint-config": "workspace:*",
     "@unshared/unplugin": "workspace:*",
-    "@vitest/coverage-c8": "0.29.5",
-    "@vitest/ui": "0.29.5",
-    "axios": "1.3.4",
-    "c8": "7.13.0",
-    "eslint": "8.36.0",
-    "fast-glob": "3.2.12",
-    "happy-dom": "8.9.0",
-    "memfs": "3.4.13",
-    "tsup": "6.7.0",
+    "@vitest/coverage-c8": "0.33.0",
+    "@vitest/ui": "0.34.1",
+    "axios": "1.4.0",
+    "c8": "8.0.1",
+    "eslint": "8.46.0",
+    "fast-glob": "3.3.1",
+    "happy-dom": "10.8.0",
+    "js-yaml": "4.1.0",
+    "memfs": "4.2.0",
+    "tsup": "7.2.0",
+    "tsx": "3.12.7",
     "types-pkg-json": "1.2.1",
     "types-tsconfig": "2.0.2",
-    "typescript": "5.0.2",
-    "vite": "4.2.1",
-    "vitest": "0.29.5"
+    "typescript": "5.1.6",
+    "vite": "4.4.8",
+    "vitest": "0.34.1"
   },
   "eslintConfig": {
     "extends": [
