feat(string): added @unshared/collection as a dependency and updated `template` function
The `string` package now relies on `@unshared/collection` as a dependency. `template` function has been updated to have a more accurate representation of the `data` parameter by using the `Collection` type from `@unshared/types` instead of object. The documentation has also been improved to include better examples for increased clarity.

--- a/packages/string/package.json
+++ b/packages/string/package.json
@@ -14,5 +14,8 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch"
+  },
+  "dependencies": {
+    "@unshared/collection": "workspace:*"
   }
 }
