--- a/packages/boolean/package.json
+++ b/packages/boolean/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@unshared/boolean",
   "type": "module",
-  "version": "0.0.1+4cbd23e",
+  "version": "0.0.1",
   "license": "MIT",
   "sideEffects": false,
   "description": "Boolean logic functions",
@@ -10,50 +10,61 @@
   "homepage": "https://github.com/shorwood/unshared#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shorwood/unshared.git",
+    "url": "git@github.com:shorwood/unshared.git",
     "directory": "packages/boolean"
   },
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "exports": {
     "Boolean": {
       "require": "./dist/Boolean.cjs",
+      "types": "./dist/Boolean.d.ts",
       "import": "./dist/Boolean.js"
     },
     "and": {
       "require": "./dist/and.cjs",
+      "types": "./dist/and.d.ts",
       "import": "./dist/and.js"
     },
     "createBoolean": {
       "require": "./dist/createBoolean.cjs",
+      "types": "./dist/createBoolean.d.ts",
       "import": "./dist/createBoolean.js"
     },
-    "*": {
+    "index": {
       "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
     },
     "nand": {
       "require": "./dist/nand.cjs",
+      "types": "./dist/nand.d.ts",
       "import": "./dist/nand.js"
     },
     "nor": {
       "require": "./dist/nor.cjs",
+      "types": "./dist/nor.d.ts",
       "import": "./dist/nor.js"
     },
     "not": {
       "require": "./dist/not.cjs",
+      "types": "./dist/not.d.ts",
       "import": "./dist/not.js"
     },
     "or": {
       "require": "./dist/or.cjs",
+      "types": "./dist/or.d.ts",
       "import": "./dist/or.js"
     },
     "xnor": {
       "require": "./dist/xnor.cjs",
+      "types": "./dist/xnor.d.ts",
       "import": "./dist/xnor.js"
     },
     "xor": {
       "require": "./dist/xor.cjs",
+      "types": "./dist/xor.d.ts",
       "import": "./dist/xor.js"
     }
   },
@@ -64,6 +75,11 @@
   ],
   "scripts": {
     "build": "tsup",
+    "build:indexes": "tsx ../../scripts/buildIndexes.ts",
+    "build:packageJson": "tsx ../../scripts/buildPackageJson.ts",
     "dev": "tsup --watch"
+  },
+  "dependencies": {
+    "@unshared/types": "workspace:*"
   }
 }
