chore: rename `reactivity` package to `reactive`
This commit renames the `reactivity` package to `reactive`. The filenames and exports are renamed accordingly. This change is intended to more accurately reflect the purpose and functionality of the package.

--- a/packages/reactive/package.json
+++ b/packages/reactive/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@unshared/reactivity",
+  "name": "@unshared/reactive",
   "type": "module",
   "license": "MIT",
   "sideEffects": false,
@@ -9,7 +9,7 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:shorwood/unshared.git",
-    "directory": "packages/reactivity"
+    "directory": "packages/reactive"
   },
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
