chore(eslint-config): rename 'dist' directory to 'lib'
Renamed the 'dist' directory to 'lib' in the eslint-config package, updating the "module", "exports", and "files" fields in package.json to reflect this change. This update is in line with the typical convention of using 'lib' as the folder name for distribution files. The build scripts referring to 'dist' have been removed as they are no longer relevant.

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -10,22 +10,18 @@
     "url": "git+https://github.com/shorwood/unshared.git",
     "directory": "packages/eslint-config"
   },
-  "module": "./dist/index.js",
+  "module": "./lib/index.js",
   "exports": {
-    ".": "./dist/index.js",
-    "./basic": "./dist/basic.js",
-    "./typescript": "./dist/typescript.js",
-    "./vue": "./dist/vue.js"
+    ".": "./lib/index.js",
+    "./basic": "./lib/basic.js",
+    "./typescript": "./lib/typescript.js",
+    "./vue": "./lib/vue.js"
   },
   "files": [
-    "dist",
+    "lib",
     "README.md",
     "LICENSE"
   ],
-  "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch"
-  },
   "peerDependencies": {
     "eslint": ">=8.0.0",
     "typescript": ">=4.0.0"
