--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -275,6 +275,9 @@
     "Tokenize": {
       "types": "./dist/Tokenize.d.ts"
     },
+    "Trim": {
+      "types": "./dist/Trim.d.ts"
+    },
     "Tuple": {
       "types": "./dist/Tuple.d.ts"
     },
@@ -321,14 +324,13 @@
   "files": [
     "dist",
     "README.md",
-    "LICENSE"
+    "LICENSE.md"
   ],
   "scripts": {
     "build": "pnpm build:indexes && pnpm build:bundle && pnpm build:packageJson",
     "build:bundle": "tsx ../../scripts/build.ts",
     "build:indexes": "tsx ../../scripts/buildIndexes.ts",
-    "build:packageJson": "tsx ../../scripts/buildPackageJson.ts",
-    "dev": "tsup --watch"
+    "build:packageJson": "tsx ../../scripts/buildPackageJson.ts"
   },
   "peerDependencies": {
     "@types/node": "18.15.5"
