--- a/packages/boolean/package.json
+++ b/packages/boolean/package.json
@@ -76,11 +76,10 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "pnpm build:bundle && pnpm build:indexes && pnpm build:packageJson",
+    "build": "pnpm build:indexes && pnpm build:bundle && pnpm build:packageJson",
     "build:bundle": "tsx ../../scripts/build.ts",
     "build:indexes": "tsx ../../scripts/buildIndexes.ts",
-    "build:packageJson": "tsx ../../scripts/buildPackageJson.ts",
-    "dev": "tsup --watch"
+    "build:packageJson": "tsx ../../scripts/buildPackageJson.ts"
   },
   "dependencies": {
     "@unshared/types": "workspace:*"
