chore: upgrade dependencies in package.json
Updated a large number of dependencies in package.json. This includes minor and patch changes for development tools such as typescript, eslint and vite, as well as various other dependencies. Some new dependencies were also added like rollup plugins and vitest utils.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "packageManager": "pnpm@7.29.1",
   "scripts": {
     "build": "pnpm -F @unshared/* build",
-    "lint": "eslint .",
+        "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "vitest",
     "test:ui": "vitest --ui",
@@ -24,27 +24,41 @@
     "@changesets/cli": "2.26.2",
     "@chialab/esbuild-plugin-meta-url": "0.17.7",
     "@chialab/esbuild-plugin-worker": "0.17.5",
+    "@rollup/plugin-replace": "5.0.3",
+    "@rollup/plugin-sucrase": "5.0.2",
+    "@rollup/plugin-terser": "0.4.4",
+    "@rollup/plugin-typescript": "11.1.5",
     "@types/eslint": "8.44.2",
-    "@types/js-yaml": "4.0.5",
-    "@types/node": "20.4.7",
+    "@types/js-yaml": "4.0.6",
+    "@types/node": "20.6.3",
     "@unshared/eslint-config": "workspace:*",
+    "@unshared/fs": "workspace:*",
+    "@unshared/functions": "workspace:*",
     "@unshared/unplugin": "workspace:*",
-    "@vitest/coverage-c8": "0.33.0",
-    "@vitest/ui": "0.34.1",
-    "axios": "1.4.0",
+    "@vitest/coverage-v8": "0.34.6",
+    "@vitest/ui": "0.34.5",
+    "@vitest/utils": "0.34.5",
+    "axios": "1.5.0",
     "c8": "8.0.1",
-    "eslint": "8.46.0",
+    "esbuild": "0.19.4",
+    "eslint": "8.49.0",
     "fast-glob": "3.3.1",
-    "happy-dom": "10.8.0",
+    "happy-dom": "12.1.5",
     "js-yaml": "4.1.0",
-    "memfs": "4.2.0",
+    "memfs": "4.3.0",
+    "rollup": "4.0.2",
+    "rollup-plugin-analyzer": "4.0.0",
+    "rollup-plugin-define": "1.0.1",
+    "rollup-plugin-dts": "6.1.0",
+    "rollup-plugin-esbuild": "6.1.0",
+    "rollup-plugin-progress": "1.1.2",
     "tsup": "7.2.0",
-    "tsx": "3.12.7",
+    "tsx": "3.12.10",
     "types-pkg-json": "1.2.1",
     "types-tsconfig": "2.0.2",
-    "typescript": "5.1.6",
-    "vite": "4.4.8",
-    "vitest": "0.34.1"
+    "typescript": "5.2.2",
+    "vite": "4.4.9",
+    "vitest": "0.34.5"
   },
   "eslintConfig": {
     "extends": [
