chore: enforce the use of `pnpm` via a pre-install script
A pre-install script (`forcePnpm.js`) was added to enforce the use of `pnpm` as the package manager in this project. If another package manager is detected during the install phase, the script will throw an error and halt the install process. The `"preinstall"` command was also added to the `package.json` to trigger this script before every install.

--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "packageManager": "pnpm@7.29.1",
   "scripts": {
     "build": "pnpm -F @unshared/* build",
-        "lint": "eslint .",
+    "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:watch": "vitest --watch",
     "test:types": "vitest typecheck",
-    "test:coverage": "vitest --coverage"
+    "test:coverage": "vitest --coverage",
+    "preinstall": "node ./scripts/forcePnpm.js"
   },
   "devDependencies": {
     "@changesets/cli": "2.26.2",
